--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    
+    <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-validation</artifactId>
+</dependency>
+
 
     <!-- JPA / Spring Data JPA (required for JpaRepository) -->
     <dependency>
