upadte telosys template for generic service, service

--- a/TelosysTools/templates/java-rest-springboot-jpa-basic/templates.cfg
+++ b/TelosysTools/templates/java-rest-springboot-jpa-basic/templates.cfg
@@ -17,9 +17,10 @@ Application       ; Application.java              ; ${SRC}/${ROOT_PKG}/applicati
 JPA entity        ; ${BEANNAME}.java              ; ${SRC}/${ROOT_PKG}/persistence/entities    ; main-java/XxxJpaEntity_java.vm
 Spring repository ; ${BEANNAME}Repository.java    ; ${SRC}/${ROOT_PKG}/persistence/repositories; main-java/XxxRepository_java.vm
 DTO               ; ${BEANNAME}DTO.java           ; ${SRC}/${ROOT_PKG}/rest/dto                ; main-java/XxxDTO_java.vm
-Generic service   ; GenericService.java           ; ${SRC}/${ROOT_PKG}/rest/services/commons   ; main-java/GenericService_java.vm ; 1
+Generic service   ; GenericService.java           ; ${SRC}/${ROOT_PKG}/common/rest/services    ; main-java/GenericService_java.vm ; 1
 Service           ; ${BEANNAME}Service.java       ; ${SRC}/${ROOT_PKG}/rest/services           ; main-java/XxxService_java.vm
 REST controller   ; ${BEANNAME}RestController.java; ${SRC}/${ROOT_PKG}/rest/controllers        ; main-java/XxxRestController_java.vm
+API Error class ; ApiError.java ; ${SRC}/${ROOT_PKG}/common/error ; main-java/ApiError_java.vm ; 1
 
 #--- src/main/resources
 application.yml        ; application.yml   ; ${RES}                                  ; main-resources/application_yml.vm ; 1
