--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,24 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-validation</artifactId>
 </dependency>
-
+<!-- JWT library -->
+<dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-api</artifactId>
+    <version>0.13.0</version>
+</dependency>
+<dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-impl</artifactId>
+    <version>0.13.0</version>
+    <scope>runtime</scope>
+</dependency>
+<dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
+    <version>0.13.0</version>
+    <scope>runtime</scope>
+</dependency>
 
     <!-- JPA / Spring Data JPA (required for JpaRepository) -->
     <dependency>
@@ -89,7 +106,11 @@
       <scope>provided</scope>
       <optional>true</optional>
     </dependency>
-
+<!-- BCrypt -->
+<dependency>
+  <groupId>org.springframework.security</groupId>
+  <artifactId>spring-security-crypto</artifactId>
+</dependency>
     <!-- Devtools and testing -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
