--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
+
+# JWT
+app.jwt.secret=Replace_with_long_random_secret_32_plus_chars
+# access token expiry in seconds (30 minutes)
+app.jwt.access-token-expiry-seconds=1800
+app.jwt.refresh-token-expiry-days=30
+app.jwt.access-token-issuer=mijimoto
+app.auth.refresh-token-hmac-secret=Replace_with_refresh_hmac_secret
