added email set up + verifyemail + reset+forgot passwor + added swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,12 @@ app.jwt.access-token-expiry-seconds=1800
 app.jwt.refresh-token-expiry-days=30
 app.jwt.access-token-issuer=mijimoto
 app.auth.refresh-token-hmac-secret=Replace_with_refresh_hmac_secret
+
+# Mail
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
+
