add docker set up for mailhog, elastic search, redis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,20 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
-# JWT
+# ----- Elasticsearch -----
+spring.elasticsearch.uris=http://localhost:9200
+spring.elasticsearch.connection-timeout=5s
+spring.elasticsearch.socket-timeout=60s
+
+# ----- Redis -----
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.timeout=60000ms
+spring.data.redis.lettuce.pool.max-active=8
+spring.data.redis.lettuce.pool.max-idle=8
+spring.data.redis.lettuce.pool.min-idle=0
+
+# ----- JWT -----
 app.jwt.secret=Replace_with_long_random_secret_32_plus_chars
 # access token expiry in seconds (30 minutes)
 app.jwt.access-token-expiry-seconds=1800
@@ -19,11 +32,10 @@ app.jwt.refresh-token-expiry-days=30
 app.jwt.access-token-issuer=mijimoto
 app.auth.refresh-token-hmac-secret=Replace_with_refresh_hmac_secret
 
-# Mail
+# ----- Mail (MailHog) -----
 spring.mail.host=localhost
 spring.mail.port=1025
 spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
-
