set up for minio, add file entity/repo/controller/service to handle file up/download, add storage service for minio

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,15 @@ spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
+
+# Minio
+minio.url=http://localhost:9000
+minio.access-key=minioadmin
+minio.secret-key=minioadmin
+minio.bucket=ecommerce-files
+minio.region=us-east-1
+minio.secure=false
+minio.presign.expiry-seconds=300
+
+# Optional: file limits
+app.file.max-size-bytes=52428800 
