--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,10 +37,23 @@ services:
     restart: unless-stopped
     networks:
       - app-network
+  minio:
+    image: minio/minio:latest
+    command: server /data --console-address ":9001"
+    ports:
+      - "9000:9000"   # S3 API
+      - "9001:9001"   # Console
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin123
+    volumes:
+      - minio_data:/data
+    restart: unless-stopped
 
 volumes:
   elasticsearch_data:
   redis_data:
+  minio_data:
 
 networks:
   app-network:
