--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
       <scope>runtime</scope>
     </dependency>
 
-    <!-- ModelMapper, MinIO -->
+    <!-- ModelMapper, MinIO, okhttp-->
     <dependency>
       <groupId>org.modelmapper</groupId>
       <artifactId>modelmapper</artifactId>
@@ -107,6 +107,11 @@
       <artifactId>minio</artifactId>
       <version>8.6.0</version>
     </dependency>
+    <dependency>
+  <groupId>com.squareup.okhttp3</groupId>
+  <artifactId>okhttp</artifactId>
+  <version>4.11.0</version>
+</dependency>
 
     <!-- Lombok: compile-time only (provided) -->
     <dependency>
